# bayyinah

./: .gitignore  README.md
backend/: .gitignore  pom.xml
backend/src/main/java/io/bayyinah/backend_api/: BayyinahAPIBackendApplication.java
backend/src/test/java/io/bayyinah/backend_api/: BayyinahAPIBackendApplicationTests.java
scraper/: pyproject.toml  requirements.txt
