[project]
name = "scraper"
version = "0.1.0"
description = "Scraping utilities for Bayyinah project."
authors = [
    {name = "Radwan Abu-Odeh",email = "radwanizzat@gmail.com"}
]
license = {text = "The Unlicense"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
